# stock-signal-ai

./: .gitignore  main.py  pyproject.toml  requirements.txt
backend/: main.py  requirements.txt
backend/agents/: ai_response_agent.py  financial_ratio_agent.py  financial_statement_agent.py  news_sentiment_agent.py  technical_analysis_agent.py
backend/ai_models/: gemini_ai_model.py  groq_ai_model.py  hf_ai_model.py
backend/api/routers/: news_analysis_api.py  signal_api.py
backend/builder/: builder_graph.py  state.py
backend/builder/nodes/: ai_response_node.py  news_sentiment_node.py  technical_analysis_node.py
backend/prompts/: ai_analysis_prompt.py  analysis_prompt.py  news_prompt.py
backend/schemas/: news_schemas.py
backend/services/: financial_ratio_service.py  financial_statement_service.py  indicators.py  news_service.py  remove_duplicate_articles.py  signal_generator.py
backend/tools/: signal_tool.py
frontend/: app.py  requirements.txt  signal_terminal.html
