[project]
name = "stock-signal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.5",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
    "yfinance>=1.4.1",
]
